Higher res hero on mobile, hero fade in gatsby-image fix

--- a/src/DSS/css/core/_typo.scss
+++ b/src/DSS/css/core/_typo.scss
@@ -57,7 +57,7 @@ h5,h6 {
 
 h1, .h1 {
 	font-size: 3.5em;
-	line-height: 1.25;
+	line-height: 1.125;
 
 	+ h2, + .h2,
 	+ h3, + .h3,
