--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -11,6 +11,10 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
+
+		img {
+			transition: opacity 0.5s ease-in-out 0.2s !important;
+		}
 	}
 
 	.bg-overlay {
@@ -43,6 +47,7 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
+		padding: 2em;
 		display: flex;
 		align-items: center;
 		justify-content: center;
